# SpaceBrowser

./: .eslintrc.json  .gitignore  LICENSE  binding.gyp  build-log.txt  build-log2.txt  build-log3.txt  fix.js  package-lock.json  package.json  patch.js  patch2.js  rebuild.js  replace-exts.js  test-csharp-edge.cs  test_electron.js  tsconfig.json  tsconfig.main.json  webpack.renderer.config.js
.github/workflows/: release.yml
assets/icons/: icon.icns
extracted_app/: package.json
extracted_app/assets/icons/: icon.icns
models/: .gitkeep
native/: CMakeLists.txt
native/build_cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  space_inference.sln  space_inference.vcxproj  space_inference.vcxproj.filters
native/build_cmake/llama_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  llama-config.cmake  llama.cpp.sln  llama.pc
native/build_cmake/llama_build/ggml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  ggml-config.cmake  ggml.sln
native/build_cmake/llama_build/ggml/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  ggml-base.vcxproj  ggml-base.vcxproj.filters  ggml-cpu.vcxproj  ggml-cpu.vcxproj.filters  ggml.vcxproj  ggml.vcxproj.filters
native/build_cmake/llama_build/ggml/src/ggml-cpu/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
native/build_cmake/llama_build/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  llama.vcxproj  llama.vcxproj.filters
native/include/: inference_engine.h  model_manager.h  sampler.h
native/inference/: addon.cpp  inference_engine.cpp  minimal_test.cpp  model_manager.cpp  sampler.cpp
scripts/: build-native.js  dist-win.js  generate-icons.js
src/ai-engine/: AIEngine.ts
src/main/: chess-server.ts  extension-manager.ts  ipc-handlers.ts  main.ts  menu.ts  ollama-importer.ts  tab-manager.ts  update-manager.ts
src/preload/: preload.ts
src/renderer/: App.tsx  amongus.html  appleshoot.html  blackops.html  boxhead.html  checkers.html  chess.html  chess3d.html  ciftelia.html  cowboy.html  eightball.html  extensions.html  flappy.html  football.html  games.html  global.d.ts  goldminer.html  index.html  index.tsx  newtab.html  reader.html  search.html  settings.html  slope.html  standoff.html  subway.html  towerbuilder.html
src/renderer/components/: AISettings.tsx  AISidebar.tsx  AddressBar.tsx  ChatInput.tsx  ChatMessages.tsx  ModelSelector.tsx  TabBar.tsx  TitleBar.tsx
src/renderer/styles/: AISettings.module.scss  AISidebar.module.scss  AddressBar.module.scss  App.module.scss  ChatInput.module.scss  ChatMessages.module.scss  ModelSelector.module.scss  TabBar.module.scss  TitleBar.module.scss  global.scss
